Enhance description of balanceball

--- a/content/post/08601_BalanceBall.Rmd
+++ b/content/post/08601_BalanceBall.Rmd
@@ -44,16 +44,20 @@ SDK <- rmarkdown::metadata$sdk
 
 任务分为**简单**、**普通**和**困难**三个难度，三个难度都有规定时间限制：
 
-* 在简单难度中，用户只需要控制一个金属球到达指定地点，且障碍物不多（只拐1~3次弯），限制时间为1分钟； 
-* 在普通难度中，用户需要同时控制两个金属球到达两个指定地点，障碍物数量中等（拐1~5次弯），限制时间为1分钟；
-* 在困难难度中，用户需要同时控制两个金属球到达两个指定地点，障碍物数量中等（拐1~5次弯），且路上有陷阱，限制时间为1分钟。
+* 在简单难度中，用户只需要控制一个金属球到达指定地点，且障碍物不多（具体见图片关卡1-3），限制时间为1分钟；
+* 在普通难度中，用户需要同时控制两个金属球到达两个指定地点，障碍物数量中等（具体见图片关卡4-6），限制时间为1分钟；
+* 在困难难度中，用户需要同时控制一~三个金属球到达一~三个指定地点，障碍物数量中等（具体见图片关卡7-9），且路上有陷阱，限制时间为1分钟。
 
-流程如下： 
+各个试次的关卡设置如下：
+
+`r blogdown::shortcode("directoryindex", path = "/static/images/balanceball", pathURL = "/images/balanceball")`
+
+流程如下：
 
 1. 屏幕中央呈现矩形空间，根据难度出现不同数量的金属球。此时不可操作，并等待用户做出操作，屏幕上方提示用户“触碰开始”。
-1. 任务开始。用户做出操作使金属球到达指定圆圈位置或者达到限制时间后结束任务。当用户连续三次失败时，任务结束。 
-1. 操作反馈。结束每次任务后立即呈现反馈，成功时呈现“成功通关，触碰开始下一关”，失败时呈现“通关失败，触碰再次尝试”。反馈始终呈现直到用户做出操作。
-1. 试次间间隔。用户可自由确定何时开始下一个试次。
+1. 任务开始。用户做出操作使金属球到达指定圆圈位置或者达到限制时间后结束任务。即使任务失败也进入下一关。在困难任务下掉进陷阱可以重复尝试两次，重新计时。
+1. 操作反馈。结束每次任务后立即呈现反馈，成功时呈现“你成功啦，触碰开始下一个任务”，失败时呈现“任务失败，不要灰心，触碰开始下一个任务”（超过时间限制，或第三次掉进陷阱）或“任务失败，不要灰心，点击重新尝试”（第一、二次掉进陷阱）。反馈始终呈现直到用户做出操作。
+1. 试次间间隔。反馈消失后1s开始下一个试次。
 
 # 后台配置
 
