--- a/content/post/08701_AuditoryFusion.Rmd
+++ b/content/post/08701_AuditoryFusion.Rmd
@@ -45,11 +45,13 @@ SDK <- rmarkdown::metadata$sdk
 流程如下：
 
 1. 屏幕呈现森林和一左一右两只小鸟，此时不可操作，并等待用户做出操作，屏幕上方提示用户“触碰开始”。
-1. 任务开始。开始任务500ms后随机一边的小鸟发出声音并有相应动画提示，声音结束1s后另一只小鸟发出声音并有相应动画提示。两只小鸟都发出声音1s后呈现新的声音刺激，要求用户判断该声音更加接近哪只小鸟。一直等待直到用户作出反应。
+1. 任务开始。开始任务500ms后随机一边的小鸟发出声音并有相应动画提示，声音结束500ms后另一只小鸟发出声音并有相应动画提示。两只小鸟都发出声音500ms后呈现新的声音刺激，要求用户判断该声音更加接近哪只小鸟。一直等待直到用户作出反应。
 【ps: 此处的第三种新的声音是用前两种声音AB进行不同比例混合的，需要麻烦你们那边按照 25%A+75%B、27.5%A+72.5%B，30%A+70%B……75%A+25%B 间隔2.5%进行混合，一共21种】
-【任务难度为逐渐变难，难度是反应在两种比例的差距，即第一个试次为25%A+75%B或75%A+25%B，下一个随机为27.5%A+72.5%B或72.5%A+27.5%B】
+【AB声音如下，A：http://sound.niaolei.org.cn/Oriolus-oriolus/144000.html；B：http://sound.niaolei.org.cn/Mirafra-javanica/24538.html】
+【麻烦分别截取AB大概500ms的声音作为原声，之后再两者混合】
 【为了后期分析便利，请把50%+50%的刺激材料称作0，25%A+75%B和75%A+25%B称作1和11、27.5%A+72.5%B和72.5%A+27.5%B称作2和12，如此类推】
-【AB声音如下，】
+1. 当用户正确判断时增加难度，表现为缩小两种声音混合比例差距，即若上一个试次为25%A+75%B或75%A+25%B，下一个随机为27.5%A+72.5%B或72.5%A+27.5%B；当用户错误判断时降低难度，表现为增大两种声音混合比例差距，即若上一个试次为27.5%A+72.5%B，下一个随机为25%A+75%B或75%A+25%B。当用户累计完成8个round时（见下文），任务结束。
+【round指每次用户从答对（R)到答错（W），或答错到答对，视为一个round，例如RRWWRWRRWWWR，RRW是第一个round，WWR是第二个round，RW是第三个round，WR是第四个round……如此类推直到用户完成8个round任务结束】
 1. 操作反馈。结束每次反应后立即呈现反馈，正确时呈现“判断正确，很棒！”，失败时呈现“判断错误，再仔细点聆听哦！”。反馈始终呈现直到用户做出操作，并进入下一试次。
 1. 试次间间隔。反馈消失后1s开始下一个试次。
 
