Fix an incorrect use of tilde symbol

--- a/content/post/08601_BalanceBall.Rmd
+++ b/content/post/08601_BalanceBall.Rmd
@@ -46,7 +46,7 @@ SDK <- rmarkdown::metadata$sdk
 
 * 在简单难度中，用户只需要控制一个金属球到达指定地点，且障碍物不多（具体见图片关卡1-3），限制时间为1分钟；
 * 在普通难度中，用户需要同时控制两个金属球到达两个指定地点，障碍物数量中等（具体见图片关卡4-6），限制时间为1分钟；
-* 在困难难度中，用户需要同时控制一~三个金属球到达一~三个指定地点，障碍物数量中等（具体见图片关卡7-9），且路上有陷阱，限制时间为1分钟。
+* 在困难难度中，用户需要同时控制一至三个金属球到达一至三个指定地点，障碍物数量中等（具体见图片关卡7-9），且路上有陷阱，限制时间为1分钟。
 
 各个试次的关卡设置如下：
 
