--- a/content/post/08601_BalanceBall.Rmd
+++ b/content/post/08601_BalanceBall.Rmd
@@ -54,10 +54,10 @@ SDK <- rmarkdown::metadata$sdk
 
 流程如下：
 
-1. 屏幕中央呈现矩形空间，根据难度出现不同数量的金属球。此时不可操作，并等待用户做出操作，屏幕上方提示用户“触碰开始”。
-1. 任务开始。用户做出操作使金属球到达指定圆圈位置或者达到限制时间后结束任务。即使任务失败也进入下一关。在困难任务下掉进陷阱可以重复尝试两次，重新计时。
-1. 操作反馈。结束每次任务后立即呈现反馈，成功时呈现“你成功啦，触碰开始下一个任务”，失败时呈现“任务失败，不要灰心，触碰开始下一个任务”（超过时间限制，或第三次掉进陷阱）或“任务失败，不要灰心，点击重新尝试”（第一、二次掉进陷阱）。反馈始终呈现直到用户做出操作。
-1. 试次间间隔。反馈消失后1s开始下一个试次。
+1. 屏幕中央呈现矩形空间，根据难度出现不同数量的金属球。
+1. 用户需在限定时间内做出操作使金属球到达指定圆圈位置。注意：在困难任务下掉进陷阱后回到出发点，但计时不重置。
+1. 操作反馈。如果用户在限定时间内使金属球达到指定地点，则任务成功；否则为失败。需显示计分动画，时间为2秒，计分规则为：初始分为0分。完成时加分为两部分的和，一部分为任务成功得分100，另一部分为时间加成分，即时间剩余秒数；不完成则总分不变。
+1. 试次间间隔。反馈消失后1秒开始下一个试次。
 
 # 后台配置
 
