--- a/content/post/08801_AuditoryProcessing.Rmd
+++ b/content/post/08801_AuditoryProcessing.Rmd
@@ -31,7 +31,7 @@ SDK <- rmarkdown::metadata$sdk
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：测查听知觉，特别是音调分辨能力。
+* **任务描述**：训练听知觉，特别是音调分辨能力。
 * **测查能力**：感知觉-听知觉
 
 # 前端交互
@@ -42,35 +42,27 @@ SDK <- rmarkdown::metadata$sdk
 
 ## 详细说明
 
-流程如下：
+### 流程说明
 
-1. 屏幕一左一右呈现两个按钮，分别在下面标签为“升调”和“降调”，此时不可操作，并等待用户做出操作，屏幕上方提示用户“触碰开始”。
-1. 任务开始。开始任务500ms后分别呈现1s的声音刺激（升调或降调随机）两个，两个声音都结束后让用户根据听到的声音按顺序点击相应按钮。当用户正确反应后提高难度，表现为每次缩短声音刺激100ms；当呈现时间为1s但失败时难度不变；当用户失败时降低难度，表现为每次增长声音刺激100ms。当用户累计完成8个round时（见下文），任务结束。
-【round指每次用户从答对（R)到答错（W），或答错到答对，视为一个round，例如RRWWRWRRWWWR，RRW是第一个round，WWR是第二个round，RW是第三个round，WR是第四个round……如此类推直到用户完成8个round任务结束】
-【需要麻烦你们使用软件制作1s的声调和降调声音和压缩声音，包括原声合共20个刺激材料，为了管理方便，升调（up）1s的称作u1000,900ms的作u900，降调（down）的为d1000，d900如此类推】
-1. 操作反馈。结束每次反应后立即呈现反馈，正确时呈现“判断正确，很棒！”，失败时呈现“判断错误，再仔细点聆听哦！”。反馈始终呈现直到用户做出操作，并进入下一试次。
+每个试次流程如下：
+
+1. 分别呈现1秒的声音刺激（升调或降调随机）二至四个，声音都播放结束后让用户根据相应顺序点击按钮。
+1. 操作反馈。结束每次反应后立即呈现反馈。
 1. 试次间间隔。反馈消失后1s开始下一个试次。
+
+### 刺激说明
+
+使用软件制作1秒的声调和降调声音和压缩声音。
 
 # 后台配置
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
-```
-
-## 试题算分
-
-```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("R", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
