Simplify descriptions of front-end specifications

--- a/content/post/09101_TemporalOrderJudgement.Rmd
+++ b/content/post/09101_TemporalOrderJudgement.Rmd
@@ -38,16 +38,14 @@ SDK <- rmarkdown::metadata$sdk
 
 ## 基本逻辑
 
-屏幕一左一右呈现两个按钮，分别在下面标记“喇叭图片”和“眼睛图片”，任务为间隔一定时间（初始为350ms）分别呈现声音刺激（“哔”）10ms和视觉刺激（红色矩形）12ms，两者顺序随机，用户需要根据两者的先后顺序点击相应按钮，难度会逐渐提高，表现为呈现的两种刺激的间隔越来越短，记录用户的正确率和反应时。
+屏幕一左一右呈现两个按钮，分别在下面标记“喇叭图片”和“眼睛图片”，任务为间隔一定时间（初始为350ms）分别呈现声音刺激（“哔”）10ms和视觉刺激（颜色上跟背景可区分的圆盘）12ms，两者顺序随机，用户需要根据两者的先后顺序点击相应按钮，记录用户的正确率和反应时。
 
 ## 详细说明
 
 流程如下：
 
-1. 屏幕一左一右呈现两个按钮，分别在下面标记“喇叭图片”和“眼睛图片”，此时不可操作，并等待用户做出操作，屏幕上方提示用户“触碰开始”。
-1. 任务开始。开始任务500ms后随机先后间隔350ms呈现两种刺激（声音刺激为“哔”，10ms；视觉刺激为呈现红色矩形，12ms），让用户根据两者的先后顺序点击相应按钮。当用户正确反应后提高难度，表现为每次两种刺激间隔时间缩短10ms；当呈现时间为350ms但失败时难度不变；当用户失败时降低难度，表现为每次增长刺激间隔时间10ms。当用户累计完成8个round（见下文）时，任务结束。
-【round指每次用户从答对（R)到答错（W），或答错到答对，视为一个round，例如RRWWRWRRWWWR，RRW是第一个round，WWR是第二个round，RW是第三个round，WR是第四个round……如此类推直到用户完成8个round任务结束】
-1. 操作反馈。结束每次反应后立即呈现反馈，正确时呈现“判断正确，很棒！”，失败时呈现“判断错误，再细心点哦！”。反馈始终呈现直到用户做出操作，并进入下一试次。
+1. 任务开始。随机先后间隔350ms呈现两种刺激（声音刺激为“哔”，10ms；视觉刺激为颜色上跟背景可区分的圆盘，12ms），让用户根据两者的先后顺序点击相应按钮。当用户正确反应后提高难度，表现为每次两种刺激间隔时间缩短10ms；当用户失败时降低难度，表现为每次增长刺激间隔时间10ms。当用户累计完成8个轮次时，任务结束。
+1. 操作反馈。反馈始终呈现直到用户做出操作，并进入下一试次。
 1. 试次间间隔。给予反馈1s后开始下一个试次。
 
 # 后台配置
@@ -55,21 +53,10 @@ SDK <- rmarkdown::metadata$sdk
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
-```
-
-## 试题算分
-
-```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
