--- a/content/post/09101_TemporalOrderJudgement.Rmd
+++ b/content/post/09101_TemporalOrderJudgement.Rmd
@@ -4,7 +4,7 @@ title: 顺序判断（TemporalOrderJudgement） # Chinese name（English name）
 author: 刘楚麒
 date: 2018-12-29 # format 2006-01-01
 # slug
-slug: # code-English name
+slug: 09101-temporalorderjudgement # code-English name
 # specific parameters for current task
 code: '09101'
 sdk: 999
