--- a/content/post/01202_Multisensory.Rmd
+++ b/content/post/01202_Multisensory.Rmd
@@ -1,13 +1,13 @@
 ---
 # heading of document
-title: 超级秒表高级（Multisensory) # Chinese name（English name）
+title: 超级秒表(高级)（Multisensory） # Chinese name（English name）
 author: 刘楚麒
 date: 2018-12-29 # format 2006-01-01
 # slug
 slug: # code-English name
 # specific parameters for current task
-code: '08901'
-sdk:
+code: '01202'
+sdk: 200
 # hugo taxonomy related
 tasknames: 多感觉整合
 categories: 文档
@@ -39,32 +39,36 @@ SDK <- rmarkdown::metadata$sdk
 
 ## 基本逻辑
 
-任务为简单反应时任务，屏幕中央呈现一个按钮，均为听到声音（“哔”）或看到秒表开始计时时立刻进行按键，其中包括三种情况：仅呈现声音；仅呈现秒表开始计时；同时呈现声音秒表开始计时。记录用户的正确率和反应时。
+任务为简单反应时任务，均为听到声音（“哔”）或看到秒表开始计时时尽快做出操作，其中包括三种情况：具体见下文。
 
 ## 详细说明
 
-各种设计与超级秒表一致，唯一不同点在于每次随机进入一种任务情况：呈现200ms的声音刺激（“哔”）；呈现秒表开始计时；呈现200ms的声音刺激（“哔”）和秒表开始计时
+任务基本流程与超级秒表一致。在每个试次中，秒表没有启动前均不显示数字。每次随机进入一种任务情况：
+
+* 200ms的声音刺激（“哔”）；
+* 秒表上出现数字并开始计时；
+* 200ms的声音刺激（“哔”）和秒表上出现数字并开始计时。
 
 # 后台配置
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("R", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
 
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("R", "config", NAME_EN, "sdk.csv")
+  ),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
