add suggestions about design & sequence of target display

--- a/content/post/05302_cheese.Rmd
+++ b/content/post/05302_cheese.Rmd
@@ -34,6 +34,7 @@ SDK <- rmarkdown::metadata$sdk
 # 前端交互
 
 [点击此处](https://i1unwb.axshare.com){target="_blank"}查看交互流程设计。
+页面风格扁平化，动物形象画风统一，背景清晰简单，背景颜色与动物颜色对比度高。
 
 ## 基本逻辑
 
@@ -42,6 +43,7 @@ SDK <- rmarkdown::metadata$sdk
 * 刺激
     + 使用不同的动物图片作刺激材料。动物行动的目的是到屏幕中间拿取“奶酪”。
     + 目标刺激（动物）个数：练习阶段2个，正式测验3-7个。正式测验每种目标刺激个数出现2轮。
+    + 刺激呈现，即动物出现在特定方格中的时间1500ms，动物运动到屏幕中间奶酪位置1000ms，上一个动物消失到下一个动物出现时间500ms，一轮中最后一只动物消失到挡板揭开（用户可以开始操作）500ms。每一轮的间隔为1000ms。
 * 序列
     + 练习阶段：使用动物个数为1、2的两种情况，重复到用户做对为止进入正式测评；
     + 正式测评：使用动物个数为3-7的五种情况，随机出现，每种情况出现两轮，总计10轮。
