--- a/content/post/05302_cheese.Rmd
+++ b/content/post/05302_cheese.Rmd
@@ -54,12 +54,12 @@ SDK <- rmarkdown::metadata$sdk
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("R", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("R", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
 
 ## 试题算分
