add ui design suggestions for butterfly

--- a/content/post/05803_butterfly.Rmd
+++ b/content/post/05803_butterfly.Rmd
@@ -37,6 +37,12 @@ SDK <- 999
 
 ## 详细说明
 
+### UI风格
+
+* 目标刺激蝴蝶，用简笔画等更简洁的形式；
+* 背景方格采用平视的视角，所有方格一样大；
+* 配色饱和度低一些，突出蝴蝶而不是背景。
+
 ### 刺激
 
 使用**蝴蝶**作为基本的刺激材料。蝴蝶的形状简单一点，使得用户可以很容易地判断是否对称。
