Enhance content style

--- a/content/post/05803_butterfly.Rmd
+++ b/content/post/05803_butterfly.Rmd
@@ -35,13 +35,13 @@ SDK <- 999
 
 [点击此处](https://sr0l8g.axshare.com){target="_blank"}查看交互流程设计。
 
-## 详细说明
-
-### UI风格
+**界面风格要求**：
 
 * 目标刺激蝴蝶，用简笔画等更简洁的形式；
 * 背景方格采用平视的视角，所有方格一样大；
 * 配色饱和度低一些，突出蝴蝶而不是背景。
+
+## 详细说明
 
 ### 刺激
 
