Fix some error in descriptions

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -36,19 +36,19 @@ SDK <- rmarkdown::metadata$sdk
 
 ## 基本逻辑
 
-夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数始终固定为**12只**），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
+夜晚森林的背景中随机位置出现一些萤火虫，其中有些会发光（原地闪烁黄光）有些不发光。发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样），同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要通过点击选出刚刚闪烁过的萤火虫（如图\@ref(fig:taskflow-image)）。
 
 ```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE, out.width="80%"}
 knitr::include_graphics("/images/VSTM/firefly.png")
 ```
 
-**引导与练习**：让被试理解要追踪发光的萤火虫
+**引导与练习**：让被试理解要追踪发光的萤火虫。
 
 ## 详细说明
 
 ### 刺激
 
-由若干萤火虫组成。其中：需要用户进行追踪的部分称为**目标刺激**；不需要用户追踪的部分称为**干扰刺激**。**目标刺激**和**干扰刺激**的数目相等。
+由若干萤火虫组成。其中：发光的萤火虫需要用户进行追踪，称为**目标刺激**；不发光的萤火虫不需要用户追踪，称为**干扰刺激**。**目标刺激**和**干扰刺激**的数目相等。
 
 ### 流程
 
