--- a/content/post/05302_cheese.Rmd
+++ b/content/post/05302_cheese.Rmd
@@ -47,7 +47,10 @@ SDK <- rmarkdown::metadata$sdk
     + 刺激呈现，即动物出现在特定方格中的时间1500ms，动物运动到屏幕中间奶酪位置1000ms，上一个动物消失到下一个动物出现时间500ms，一轮中最后一只动物消失到挡板揭开（用户可以开始操作）500ms。每一轮的间隔为1000ms。
 * 序列
     + 练习阶段：使用动物个数为1、2的两种情况，重复到用户做对为止进入正式测评；
-    + 正式测评：使用动物个数为3-7的五种情况，随机出现，每种情况出现两轮，总计10轮。
+    + 正式测评：使用动物个数为2-7的6种情况，每种情况出现2轮，总计12轮。
+* 序列文件如下：
+    + 正式测评请使用[序列1](/seq/cheese_normal.json){target="_blank"}。
+    + 若有短时间进行两次测评，第二次测评使用[序列2](/seq/cheese_extra.json){target="_blank"}。
 
 # 后台配置
 
