--- a/content/post/05803_butterfly.Rmd
+++ b/content/post/05803_butterfly.Rmd
@@ -55,10 +55,17 @@ SDK <- 999
 ### 序列
 
 * 引导和练习都只需要呈现2张（1张对称、1张不对称）蝴蝶图片进行记忆。
-* 正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。[序列文件](/seq/05803_butterfly.json)中包含以下值：
-    + `slen`：当前轮次需要呈现的蝴蝶个数（3-6中的一个）。
-    + `sym`：当前轮次先后呈现的蝴蝶是否对称，其中`s`代表对称，`n`代表不对称。例如`nsn`就表示现后呈现的三张蝴蝶照片依次是**不对称**、**对称**、**不对称**。
-    + `loc`：当前轮次先后呈现的蝴蝶飞入网格后停留的位置，使用16进制数字表示（参考设计中的图）。例如`148`就表示先后呈现的蝴蝶位置分别为1号、4号、8号网格。
+* 正式测评随机呈现3--7张蝴蝶图片进行记忆，以序列文件为准。
+* 序列文件
+    * 一般情况下请使用[序列1](/seq/butterfly_normal.json){target="_blank"}。
+    * 短时间内重复测评，第二次使用[序列2](/seq/butterfly_extra.json){target="_blank"}。
+    * 序列文件中使用的名称说明：
+        * `length`
+        : 需要记忆的蝴蝶个数。
+        * `symmetry`
+        : 各蝴蝶的对称性，`sym`表示**对称**，`asym`表示**不对称**，使用连字符（即`-`）分隔。
+        * `location`
+        : 各蝴蝶隐藏的位置，且位置使用数字1-16编号，使用连字符（即`-`）分隔。
 
 # 后台配置
 
